# agent-with-mcp-example

./: README.md  agent.py  chat.py  envrc.template  psutil_mcp.py  pydantic_utils.py  pyproject.toml
